# learning-haskell

./: .gitignore  LICENSE  README.md  flake.nix  learning-haskell.cabal  learning.hs  package.yaml  result
app/: Parsing.hs
lib/: LearningHaskell.hs
lib/LearningHaskell/: Parsing.hs
rpl-calculator/: LibRpl.hs
rpl-calculator/LibRpl/Parser/: Lexer.hs  Parser.hs
rpl-calculator/Parser/: Lexer.hs
rpn-calculator/: LibRpn.hs
rpn-calculator/LibRpn/Parser/: Lexer.hs  Parser.hs
sorting/: msort.hs  qsort.hs
tests/: test_parsing.hs  test_rpl.hs  test_rpn.hs
