cabal-version:   3.0
name:            learning-haskell
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      dowlandaiello@gmail.com
author:          Dowland Aiello
build-type:      Simple
extra-doc-files: CHANGELOG.md

library learning-haskell-lib
    exposed-modules:  LearningHaskell, LearningHaskell.Parsing
    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.18.2.1

executable learning-haskell
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.18.2.1

test-suite test-parsing
    type:          exitcode-stdio-1.0
    main-is:       tests/test_parsing.hs
    build-depends:
        base ^>=4.18.2.1,
        HUnit ^>=1.6.2.0,
        learning-haskell-lib

library rpn-lib
    exposed-modules:  LibRpn, LibRpn.Parser.Parser, LibRpn.Parser.Lexer
    hs-source-dirs:   rpn-calculator
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.18.2.1, learning-haskell-lib

executable rpn-calculator
    main-is:          Main.hs
    hs-source-dirs:   rpn-calculator
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.18.2.1, rpn-lib, learning-haskell-lib

test-suite test-rpn
    type:          exitcode-stdio-1.0
    main-is:       tests/test_rpn.hs
    build-depends:
        base ^>=4.18.2.1,
        HUnit ^>=1.6.2.0,
        learning-haskell-lib,
        rpn-lib

